Final tweaks, unit tests, Docker resources, and README